--- a/src/index.css
+++ b/src/index.css
@@ -228,4 +228,37 @@
     opacity: 1;
     transform: translateY(0);
   }
+
+  /* Flip Card Effect */
+  .flip-card {
+    background-color: transparent;
+    width: 100%;
+    height: 12rem; /* 192px - matches h-48 */
+    perspective: 1000px;
+  }
+
+  .flip-card-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+  }
+
+  .flip-card:hover .flip-card-inner {
+    transform: rotateY(180deg);
+  }
+
+  .flip-card-front, .flip-card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+  }
+
+  .flip-card-back {
+    transform: rotateY(180deg);
+  }
 }
